<resources>
    <string name="app_name">My Application</string>
    <string name="email">Email Address</string>
    <string name="next">Next</string>
    <string name="resend_email">Resend Email</string>
    <string name="verify">Verify</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
</resources>
